--- a/index.html
+++ b/index.html
@@ -61,7 +61,6 @@
     /* Flex Children */
     .panel > * {
       align-items: center;
-      border: 1px solid red;
       display: flex;
       flex: 1 0 auto;
       justify-content: center;
@@ -134,6 +133,27 @@
   </div>
 
   <script>
+
+    // Select each panel:
+    const panels = document.querySelectorAll('.panel');
+
+    // Toggle "open" class when panel is clicked:
+    function toggleOpen() {
+      this.classList.toggle('open');
+    }
+
+    // After "open" panel transition ends, transition smaller text up or down:
+    function toggleActive(e) {
+      // Check if clicked element includes 'flex' (Safari plus other browsers):
+      if(e.propertyName.includes('flex')) {
+        this.classList.toggle('open-active');
+      }
+    }
+
+    // Listen for clicks on each panel and toggle "open" class:
+    panels.forEach(panel => panel.addEventListener('click', toggleOpen));
+    // Listen for transitionend on each panel and toggle top and bottom text in and out:
+    panels.forEach(panel => panel.addEventListener('transitionend', toggleActive));
 
   </script>
 
